--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,39 +1,38 @@
-# AI-Mem Backend Environment Configuration
+# AI-Mem Backend Configuration
 
-# Server Settings
+# Server
 HOST=0.0.0.0
 PORT=8000
 DEBUG=false
 
 # Security
-SECRET_KEY=your-secret-key-change-in-production-minimum-32-characters
+SECRET_KEY=your-secret-key-here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Database Configuration
-# PostgreSQL (recommended for production/Docker)
+# CORS
+ALLOWED_ORIGINS=["http://localhost:20040", "http://127.0.0.1:20040", "http://localhost:3000"]
+ALLOWED_HOSTS=["*"]
+
+# Database (PostgreSQL)
 DATABASE_URL=postgresql+asyncpg://aimem_user:aimem_password@localhost:5432/aimem
 
-# SQLite fallback for local development
+# Database (SQLite fallback for development)
 # DATABASE_URL=sqlite+aiosqlite:///./aimem.db
 
-# Development PostgreSQL (docker-compose.dev.yml)
-# DATABASE_URL=postgresql+asyncpg://dev_user:dev_password@localhost:5433/aimem_dev
-
-# Redis Configuration
+# Redis
 REDIS_URL=redis://localhost:6379
 
-# Development Redis (docker-compose.dev.yml)
-# REDIS_URL=redis://localhost:6380
+# GitHub OAuth
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
+GITHUB_REDIRECT_URI=http://localhost:20040/auth/callback
 
-# Search Configuration
+# Search
 SEARCH_MODEL_NAME=all-MiniLM-L6-v2
 
-# File Upload
-MAX_FILE_SIZE=10485760  # 10MB in bytes
+# File upload
+MAX_FILE_SIZE=10485760
 
 # Logging
 LOG_LEVEL=INFO
-
-# CORS Origins (comma-separated)
-ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:3001,http://127.0.0.1:3001
