--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "python-json-logger>=2.0.7",
     "prometheus-client>=0.19.0",
     "email-validator>=2.3.0",
+    "httpx>=0.25.0",
+    "PyJWT>=2.8.0",
 ]
 
 [project.optional-dependencies]
