--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
-name = "ai-mem"
+name = "mem8"
 version = "1.1.0"
-description = "AI Memory Management CLI for team collaboration with Claude Code integration"
+description = "Memory management CLI for the orchestr8 ecosystem - team collaboration with shared thoughts"
 readme = "README.md"
 authors = [
-    {name = "AI-Mem Team", email = "dev@agenticinsights.com"},
+    {name = "Orchestr8 Team", email = "dev@orchestr8.dev"},
 ]
 license = {text = "MIT"}
 classifiers = [
@@ -18,7 +18,7 @@ classifiers = [
     "Topic :: Documentation",
     "Topic :: Text Processing",
 ]
-keywords = ["ai", "memory", "collaboration", "claude-code", "thoughts", "knowledge-management"]
+keywords = ["orchestr8", "memory", "collaboration", "thoughts", "knowledge-management", "o8"]
 requires-python = ">=3.11"
 dependencies = [
     "click>=8.1.0",
@@ -37,8 +37,7 @@ dependencies = [
 ]
 
 [project.scripts]
-ai-mem = "ai_mem.cli:main"
-aimem = "ai_mem.cli:main"
+mem8 = "ai_mem.cli:main"
 
 [project.urls]
 Homepage = "https://github.com/killerapp/ai-mem"
@@ -60,6 +59,9 @@ dev = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["ai_mem"]
 
 [tool.semantic_release]
 version_variables = [
