feat: complete mem8 rebranding - update CLI and documentation
- Update all CLI command descriptions and help text to use mem8 branding
- Replace AI-Mem references with mem8 throughout user-facing text
- Update project URLs to reflect mem8 repository naming
- Position as orchestr8 ecosystem companion tool to o8 CLI
- Maintain backward compatibility while establishing new brand identity

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,10 +40,10 @@ dependencies = [
 mem8 = "ai_mem.cli:main"
 
 [project.urls]
-Homepage = "https://github.com/killerapp/ai-mem"
-Documentation = "https://github.com/killerapp/ai-mem#readme"
-Repository = "https://github.com/killerapp/ai-mem"
-Issues = "https://github.com/killerapp/ai-mem/issues"
+Homepage = "https://github.com/killerapp/mem8"
+Documentation = "https://github.com/killerapp/mem8#readme"
+Repository = "https://github.com/killerapp/mem8"
+Issues = "https://github.com/killerapp/mem8/issues"
 
 [project.optional-dependencies]
 dev = [
