fix: update remaining ai-mem references in frontend to mem8
- Fix hardcoded thought path from ai-mem-phase3.md to mem8-phase3.md in mock data
- Update remaining CSS comments to use mem8 branding
- Update Dockerfile comment to reflect mem8 project name
- Complete frontend rebranding to eliminate all AI-Mem references

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-# Frontend Dockerfile for AI-Mem
+# Frontend Dockerfile for mem8
 FROM node:18-alpine AS base
 
 # Install dependencies only when needed
