--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,22 @@ out-*/
 test-*/
 *-files.txt
 
-.claude
+# Claude settings
+.claude/settings.local.json
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
 
 *.db
 
