feat: bundle templates in wheel distribution to fix uvx installation
- Add Hatch force-include configuration to package templates in wheel
- Update cli.py and memory.py to use importlib.resources for template discovery
- Add fallback to file-based paths for development mode
- Create ai_mem/templates module structure
- Fixes uvx mem8 init failing with template path not found errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,10 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["ai_mem"]
 
+[tool.hatch.build.targets.wheel.force-include]
+"claude-dot-md-template" = "ai_mem/templates/claude-dot-md-template"
+"shared-thoughts-template" = "ai_mem/templates/shared-thoughts-template"
+
 [tool.semantic_release]
 version_variables = [
     "ai_mem/__init__.py:__version__",
