--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dependencies = [
 ]
 
 [project.scripts]
-mem8 = "ai_mem.cli:main"
+mem8 = "mem8.cli:main"
 
 [project.urls]
 Homepage = "https://github.com/killerapp/mem8"
@@ -61,15 +61,15 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["ai_mem"]
+packages = ["mem8"]
 
 [tool.hatch.build.targets.wheel.force-include]
-"claude-dot-md-template" = "ai_mem/templates/claude-dot-md-template"
-"shared-thoughts-template" = "ai_mem/templates/shared-thoughts-template"
+"claude-dot-md-template" = "mem8/templates/claude-dot-md-template"
+"shared-thoughts-template" = "mem8/templates/shared-thoughts-template"
 
 [tool.semantic_release]
 version_variables = [
-    "ai_mem/__init__.py:__version__",
+    "mem8/__init__.py:__version__",
 ]
 version_toml = [
     "pyproject.toml:project.version",
