--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-# AI-Mem Backend Configuration
+# mem8 Backend Configuration
 
 # Server
 HOST=0.0.0.0
@@ -15,10 +15,10 @@ ALLOWED_ORIGINS=["http://localhost:20040", "http://127.0.0.1:20040", "http://loc
 ALLOWED_HOSTS=["*"]
 
 # Database (PostgreSQL)
-DATABASE_URL=postgresql+asyncpg://aimem_user:aimem_password@localhost:5432/aimem
+DATABASE_URL=postgresql+asyncpg://mem8_user:mem8_password@localhost:5432/mem8
 
 # Database (SQLite fallback for development)
-# DATABASE_URL=sqlite+aiosqlite:///./aimem.db
+# DATABASE_URL=sqlite+aiosqlite:///./mem8.db
 
 # Redis
 REDIS_URL=redis://localhost:6379
