--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,4 @@
-# AI-Mem Development Docker Compose
+# mem8 Development Docker Compose
 # Lightweight setup for local development with hot reload
 
 version: '3.8'
@@ -7,9 +7,9 @@ services:
   # PostgreSQL Database for Development
   postgres-dev:
     image: postgres:15-alpine
-    container_name: aimem-postgres-dev
+    container_name: mem8-postgres-dev
     environment:
-      POSTGRES_DB: aimem_dev
+      POSTGRES_DB: mem8_dev
       POSTGRES_USER: dev_user
       POSTGRES_PASSWORD: dev_password
       POSTGRES_HOST_AUTH_METHOD: trust
@@ -19,24 +19,24 @@ services:
       - postgres_dev_data:/var/lib/postgresql/data
       - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U dev_user -d aimem_dev"]
+      test: ["CMD-SHELL", "pg_isready -U dev_user -d mem8_dev"]
       interval: 10s
       timeout: 5s
       retries: 5
     networks:
-      - aimem-dev-network
+      - mem8-dev-network
     restart: unless-stopped
 
   # Redis for Development
   redis-dev:
     image: redis:7-alpine
-    container_name: aimem-redis-dev
+    container_name: mem8-redis-dev
     ports:
       - "6380:6379"  # Different port to avoid conflicts
     volumes:
       - redis_dev_data:/data
     networks:
-      - aimem-dev-network
+      - mem8-dev-network
     restart: unless-stopped
 
 volumes:
@@ -46,5 +46,5 @@ volumes:
     driver: local
 
 networks:
-  aimem-dev-network:
+  mem8-dev-network:
     driver: bridge
