--- a/.releaserc.json
+++ b/.releaserc.json
@@ -6,13 +6,13 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "sed -i 's/version = \".*\"/version = \"${nextRelease.version}\"/' pyproject.toml && echo '__version__ = \"${nextRelease.version}\"' > ai_mem/__init__.py && uv build"
+        "prepareCmd": "sed -i 's/version = \".*\"/version = \"${nextRelease.version}\"/' pyproject.toml && echo '__version__ = \"${nextRelease.version}\"' > mem8/__init__.py && uv build"
       }
     ],
     [
       "@semantic-release/git",
       {
-        "assets": ["pyproject.toml", "ai_mem/__init__.py"],
+        "assets": ["pyproject.toml", "mem8/__init__.py"],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
