--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,8 @@ Issues = "https://github.com/killerapp/mem8/issues"
 dev = [
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
+    "pytest-html>=4.0.0",
+    "pytest-xdist>=3.0.0",
     "black>=23.0.0",
     "isort>=5.0.0",
     "mypy>=1.0.0",
