--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,6 @@ dependencies = [
     "watchdog>=3.0.0",
     "colorama>=0.4.6",
     "requests>=2.28.0",
-    "sentence-transformers>=2.2.0",
 ]
 
 [project.scripts]
@@ -56,6 +55,9 @@ dev = [
     "mypy>=1.0.0",
     "python-semantic-release>=9.0.0",
     "build>=1.0.0",
+]
+semantic = [
+    "sentence-transformers>=2.2.0",
 ]
 
 [build-system]
