--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-# Backend Dockerfile for mem8
+# Backend Dockerfile for mem8 with integrated CLI
 FROM python:3.12-slim
 
 # Set environment variables
@@ -11,6 +11,7 @@ ENV PYTHONUNBUFFERED=1 \
 RUN apt-get update && apt-get install -y \
     gcc \
     postgresql-client \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Install uv for fast Python package management
@@ -19,17 +20,22 @@ COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
 # Set work directory
 WORKDIR /app
 
-# Copy dependency files
-COPY pyproject.toml uv.lock* ./
+# Copy the entire mem8 project (for CLI)
+COPY pyproject.toml README.md ./
+COPY mem8/ ./mem8/
 
-# Install Python dependencies
-RUN uv sync --frozen --no-dev
+# Copy backend files
+COPY backend/ ./backend/
 
-# Copy source code
-COPY src/ ./src/
+# Install mem8 CLI with uv
+RUN uv pip install --system -e .
 
-# Copy database initialization script
-COPY init_db.py ./
+# Install backend dependencies
+WORKDIR /app/backend
+RUN uv pip install --system fastapi uvicorn[standard] sqlalchemy asyncpg aiosqlite pydantic pydantic-settings redis prometheus-client python-multipart python-jose[cryptography] passlib[bcrypt] httpx email-validator alembic websockets python-json-logger PyJWT
+
+# Set Python path to include backend src
+ENV PYTHONPATH=/app/backend/src:$PYTHONPATH
 
 # Expose port
 EXPOSE 8000
@@ -38,5 +44,5 @@ EXPOSE 8000
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/api/v1/health || exit 1
 
-# Default command
-CMD ["uv", "run", "python", "-m", "uvicorn", "mem8_api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Use mem8 serve command for cleaner entry point
+CMD ["mem8", "serve", "--host", "0.0.0.0", "--port", "8000"]
