--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,7 +16,6 @@ dependencies = [
     "python-multipart>=0.0.6",
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
-    "sentence-transformers>=2.2.0",
     "redis>=5.0.0",
     "websockets>=11.0.0",
     "python-json-logger>=2.0.7",
@@ -40,6 +39,9 @@ dev = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/mem8_api"]
 
 [tool.black]
 line-length = 88
