--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,7 @@
-# Development Docker Compose for mem8 (with hot reloading)
-# Usage: docker-compose --env-file .env.dev up
-# For production: docker-compose -f docker-compose.prod.yml --env-file .env.prod up
+# Production Docker Compose for mem8
+# Usage: docker-compose -f docker-compose.prod.yml --env-file .env.prod up
+
+version: '3.8'
 
 services:
   # PostgreSQL Database
@@ -16,7 +17,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     ports:
-      - "5433:5432"
+      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
@@ -43,7 +44,7 @@ services:
       - mem8-network
     restart: unless-stopped
 
-  # Backend API (using mem8 serve)
+  # Backend API (production)
   backend:
     build:
       context: .
@@ -73,21 +74,18 @@ services:
       timeout: 10s
       retries: 3
 
-  # Frontend Web App
+  # Frontend Web App (production)
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     container_name: ${COMPOSE_PROJECT_NAME}-frontend
     environment:
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
-      - NODE_ENV=${NODE_ENV}
+      - NODE_ENV=production
       - PORT=${FRONTEND_PORT}
     ports:
       - "${FRONTEND_PORT}:${FRONTEND_PORT}"
-    volumes:
-      - ./frontend:/app:cached
-      - /app/node_modules
     depends_on:
       backend:
         condition: service_healthy
