fix: enable Docker dev access to thoughts directory
Fix development Docker setup to properly access current repo's thoughts:
- Add thoughts volume mount to docker-compose.yml
- Add Docker path detection for /app/backend/src working directory
- Update both filesystem service and public API with same path logic
- Enables viewing research reports and plans in development mode

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,7 @@ services:
     volumes:
       - ./backend/src:/app/backend/src:cached
       - ./mem8:/app/mem8:cached
+      - ./thoughts:/app/thoughts:cached
     command: ["mem8", "serve", "--host", "0.0.0.0", "--port", "8000", "--reload"]
     depends_on:
       postgres:
