--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,11 +88,14 @@ services:
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
       - NODE_ENV=${NODE_ENV}
       - PORT=${FRONTEND_PORT}
+      - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true
     ports:
       - "${FRONTEND_PORT}:${FRONTEND_PORT}"
     volumes:
       - ./frontend:/app:cached
       - /app/node_modules
+      - /app/.next
     depends_on:
       backend:
         condition: service_healthy
