--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ dependencies = [
     "watchdog>=3.0.0",
     "colorama>=0.4.6",
     "requests>=2.28.0",
+    "uvicorn>=0.37.0",
+    "fastapi>=0.118.0",
 ]
 
 [project.scripts]
@@ -58,6 +60,23 @@ dev = [
 ]
 semantic = [
     "sentence-transformers>=2.2.0",
+]
+server = [
+    "sqlalchemy>=2.0.0",
+    "asyncpg>=0.29.0",
+    "aiosqlite>=0.19.0",
+    "pydantic-settings>=2.0.0",
+    "redis>=5.0.0",
+    "prometheus-client>=0.19.0",
+    "python-multipart>=0.0.6",
+    "python-jose[cryptography]>=3.3.0",
+    "passlib[bcrypt]>=1.7.4",
+    "httpx>=0.25.0",
+    "email-validator>=2.1.0",
+    "alembic>=1.12.0",
+    "websockets>=12.0",
+    "python-json-logger>=2.0.7",
+    "PyJWT>=2.8.0",
 ]
 
 [build-system]
