feat(security): implement comprehensive CLI security hardening
Prevent accidental data loss and malicious input with defense-in-depth:

- Delete operations now require explicit "DELETE" text confirmation
- Path traversal blocked in search (rejects ../ and absolute paths)
- Symlink operations require explicit force flag to replace existing
- Home shortcut (~/.mem8) validates target before replacement
- Branch names validated against injection patterns and git rules
- Force flags documented with clear warnings (⚠️ DANGEROUS)

All changes are backward compatible. Added 14 security tests.

Addresses security review findings for data loss prevention.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,3 +117,8 @@ profile = "black"
 [tool.mypy]
 warn_return_any = true
 warn_unused_configs = true
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+]
