--- a/documentation/package.json
+++ b/documentation/package.json
@@ -17,9 +17,12 @@
   "dependencies": {
     "@docusaurus/core": "3.9.1",
     "@docusaurus/preset-classic": "3.9.1",
+    "@docusaurus/theme-live-codeblock": "^3.9.1",
     "@docusaurus/theme-mermaid": "^3.9.1",
     "@mdx-js/react": "^3.0.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
+    "docusaurus-plugin-llms-txt": "^0.1.3",
+    "framer-motion": "^12.23.22",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
