--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -57,5 +57,5 @@ jobs:
         if: github.event_name == 'push'
         run: |
           echo "🚀 Deployed to Cloudflare Pages"
-          echo "Preview: https://${{ github.sha }}.mem8.pages.dev"
           echo "Production: https://mem8.agenticinsights.com"
+          echo "Cloudflare: https://mem8.pages.dev"
