--- a/.github/workflows/preview-docs.yml
+++ b/.github/workflows/preview-docs.yml
@@ -11,6 +11,7 @@ jobs:
   deploy-preview:
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       pull-requests: write
 
     steps:
@@ -23,6 +24,16 @@ jobs:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: documentation/package-lock.json
+
+      - name: Cache Docusaurus build
+        uses: actions/cache@v4
+        with:
+          path: |
+            documentation/.docusaurus
+            documentation/node_modules/.cache
+          key: ${{ runner.os }}-docusaurus-${{ hashFiles('documentation/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-docusaurus-
 
       - name: Install dependencies
         working-directory: ./documentation
@@ -40,13 +51,13 @@ jobs:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         run: |
           OUTPUT=$(npx wrangler pages deploy ./build \
-            --project-name=mem8-docs \
+            --project-name=mem8 \
             --commit-hash=${{ github.event.pull_request.head.sha }} \
             --commit-message="PR #${{ github.event.pull_request.number }}: ${{ github.event.pull_request.title }}" \
             --branch=pr-${{ github.event.pull_request.number }})
 
           # Extract deployment URL from output
-          DEPLOYMENT_URL=$(echo "$OUTPUT" | grep -oP 'https://[a-z0-9]+\.mem8-docs\.pages\.dev' | head -1)
+          DEPLOYMENT_URL=$(echo "$OUTPUT" | grep -oP 'https://[a-z0-9]+\.mem8\.pages\.dev' | head -1)
           echo "deployment_url=$DEPLOYMENT_URL" >> $GITHUB_OUTPUT
 
       - name: Comment on PR
