--- a/documentation/package.json
+++ b/documentation/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/theme-live-codeblock": "^3.9.1",
     "@docusaurus/theme-mermaid": "^3.9.1",
     "@mdx-js/react": "^3.0.0",
+    "@tailwindcss/postcss": "^4.1.14",
     "clsx": "^2.1.1",
     "docusaurus-plugin-llms-txt": "^0.1.3",
     "framer-motion": "^12.23.22",
