--- a/mem8/templates/mem8-templates.yaml
+++ b/mem8/templates/mem8-templates.yaml
@@ -88,6 +88,7 @@ toolbelt:
     - name: "gh"
       command: "gh"
       description: "GitHub CLI"
+      version: ">=2.60"
       install:
         windows: "winget install GitHub.cli"
         macos: "brew install gh"
