--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "requests>=2.28.0",
     "uvicorn>=0.37.0",
     "fastapi>=0.118.0",
+    "packaging>=23.0",
 ]
 
 [project.scripts]
