--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "uvicorn>=0.37.0",
     "fastapi>=0.118.0",
     "packaging>=23.0",
+    "psutil>=5.9.0",
 ]
 
 [project.scripts]
