refactor: consolidate Docker setup with profiles
- Merge docker-compose.yml and docker-compose.prod.yml into single file
- Use Docker Compose profiles for dev (default) and prod
- Replace 5 env files with single .env.example template
- Simplifies workflow: docker-compose up (dev) or docker-compose --profile prod up
- Update .gitignore for cleaner env file patterns

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,7 @@ wheels/
 # Virtual environments
 .venv
 
-# Output directory for generated templates
-out/
-out-*/
+# Temporary test files
 test-*/
 *-files.txt
 
@@ -37,11 +35,10 @@ Thumbs.db
 # Backups
 backups/
 
+# Environment files (copy .env.example to .env)
 .env
-.env.*local*
-.env.*.local*
-.env.dev
-.env.prod
+.env.local
+.env.*.local
 
 # Test reports and coverage
 htmlcov/
