docs: restructure contributing guides and clean up root directory
- Rewrite CONTRIBUTING.md as concise entry point (362 → 51 lines)
- Move detailed docs to documentation/docs/contributing/
- Add setup.md and architecture.md with comprehensive guides
- Remove obsolete root files: AGENTS.md, QUICKSTART.md, ROADMAP.md, DEVELOPER_GUIDE.md
- Remove obsolete directories: example-configs/, docs/, task.md
- Update all URLs from mem8.agenticinsights.com to docs.codebasecontext.org
- Overall reduction: -1,861 lines across 33 files

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -57,5 +57,5 @@ jobs:
         if: github.event_name == 'push'
         run: |
           echo "🚀 Deployed to Cloudflare Pages"
-          echo "Production: https://mem8.agenticinsights.com"
+          echo "Production: https://docs.codebasecontext.org"
           echo "Cloudflare: https://mem8.pages.dev"
