refactor: extract template management (Phase 3)
Extract template installation and management into dedicated
mem8/core/templates.py module with TemplateManager class.
This completes Phase 3 of CLI architecture refactoring.

Changes:
- Create TemplateManager class in mem8/core/templates.py
- Update CLI to use TemplateManager instead of inline functions
- Remove ~180 lines of duplicate template code from CLI
- Preserve all existing functionality and behavior

Success criteria met:
✓ Template tests pass
✓ Init command works identically
✓ Data preservation unchanged
✓ All cookiecutter code consolidated

Code reduction: -259 lines net (removed 279, added 20)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
 ]
 
 [project.scripts]
-mem8 = "mem8.cli:main"
+mem8 = "mem8.cli_entry:main"
 
 [project.urls]
 Homepage = "https://github.com/killerapp/mem8"
