--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -46,11 +46,14 @@ jobs:
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         run: |
+          # Get first line of commit message only to avoid multi-line issues
+          COMMIT_MSG=$(echo "$COMMIT_MESSAGE" | head -n 1)
           npx wrangler pages deploy ./build \
             --project-name=codebase-context-site \
             --commit-hash=${{ github.sha }} \
-            --commit-message="${{ github.event.head_commit.message }}" \
+            --commit-message="$COMMIT_MSG" \
             --branch=${{ github.ref_name }}
 
       - name: Comment deployment URL
